--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,7 @@
 .app-container {
     text-align: center;
     padding: 20px;
-    background: linear-gradient(to right, #ff7e5f, #feb47b);
+    background: linear-gradient(to right, #391d55, #e86807);
     color: white;
     font-family: Arial, sans-serif;
     min-height: 100vh;
